Changes to better sync w/ Java 25